reports/chsh_inequality.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.8/dist-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/usr/local/lib/python3.8/dist-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/usr/local/lib/python3.8/dist-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.8/dist-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.8/dist-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/usr/local/lib/python3.8/dist-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/usr/local/lib/python3.8/dist-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# ã¾ãšã¯å¿…è¦ã«ãªã‚‹pythonãƒ¢ã‚¸ãƒ¥ãƒ¼ãƒ«ã‚’ã™ã¹ã¦ã‚¤ãƒ³ãƒãƒ¼ãƒˆã—ã¦ãŠã
import numpy as np
import matplotlib.pyplot as plt
from qiskit import QuantumCircuit transpile
from qiskit.providers.ibmq import least_busy, IBMQAccountCredentialsNotFound
from qiskit.tools.monitor import job_monitor
from qiskit.visualization import plot_histogram
from qiskit_ibm_provider import IBMProvider
# qc_workbookã¯ã“ã®ãƒ¯ãƒ¼ã‚¯ãƒ–ãƒƒã‚¯ç‹¬è‡ªã®ãƒ¢ã‚¸ãƒ¥ãƒ¼ãƒ«ï¼ˆã‚¤ãƒ³ãƒãƒ¼ãƒˆã‚¨ãƒ©ãƒ¼ãŒå‡ºã‚‹å ´åˆã¯PYTHONPATHã‚’è¨­å®šã™ã‚‹ã‹ã€sys.pathã‚’ã„ã˜ã£ã¦ãã ã•ã„ï¼‰
from qc_workbook.utils import operational_backend

print('notebook ready')
------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    from qiskit import QuantumCircuit transpile[0m
[0m                                      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2159814296.py, line 4)

